# bittorrent-rs

./: .gitignore  Cargo.toml  README.md  [Ohys-Raws] Slow Loop - 01 (AT-X 1280x720 x264 AAC JP).mp4.torrent  [SubsPlease] Yofukashi no Uta - 12 (1080p) [6529938D].mkv.torrent  [mal lu zen] Senpai ga Uzai Kouhai no Hanashi - 11 [720p] 10-bit.mkv.torrent  rustfmt.toml
.github/workflows/: rust.yml
bittorrent-cli/: Cargo.toml
bittorrent-cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: util.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs  resume.rs  store.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: extensions.rs  metainfo.rs  peer_id.rs  tracker.rs
crates/protocol/src/wire/: connection.rs  message.rs
src/: bitfield.rs  event.rs  lib.rs  main.rs  metainfo.rs  peer.rs  peer_worker.rs  prelude.rs  session.rs  session_event.rs  session_other.rs  store.rs  tracker.rs  util.rs  wire.rs
src/core/: algorithm.rs  bitfield.rs  block.rs  configuration.rs  event.rs  mod.rs  peer.rs  peer_new.rs  peer_worker.rs  piece.rs  piece_download.rs  session.rs  statistics.rs  torrent.rs  util.rs  worker.rs
src/core/peer/: block_worker.rs  mod.rs  task.rs
src/core/session/: handler.rs  mod.rs  task.rs
src/core/torrent/: mod.rs  resume.rs  task.rs
src/core/worker/: block_worker.rs
src/io/: store.rs
src/peer/: block_worker.rs  mod.rs  task.rs
src/protocol/: clients.json  extensions.rs  metainfo.rs  mod.rs  peer_id.rs  tracker.rs  wire.rs
src/protocol/wire/: connection.rs  message.rs  mod.rs  wire.rs
src/session/: handler.rs  mod.rs  task.rs
src/torrent/: mod.rs  task.rs
torrents/: debian-10.10.0-amd64-DVD-1.iso.torrent
