[workspace]
members = [
	"bittorrent-cli",
	"crates/common",
	"crates/io",
	"crates/protocol"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Johannes <thexydez@gmail.com>"]
license = "Unlicense"

[workspace.dependencies]
log = "0.4"
tokio = "1"
#tracing = "0.1"
thiserror = "1"
pretty_assertions = "1"
rand = "0.8"
serde = "1"
sha1 = "0.10"

[package]
name = "bittorrent"
description = "lightweight implementation of the bittorrent v1 protocol"
repository = "https://github.com/Xydez/bittorrent-rs"
keywords = ["bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Crate dependencies
tap = "1"
tokio-util = { version = "0.7", features = ["rt"] }

# Workspace dependencies
log.workspace = true
tokio = { workspace = true, features = ["macros"] }
#tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
sha1.workspace = true

# Local dependencies
common.path = "crates/common"
io = { path = "crates/io", features = ["resume"] }
protocol.path = "crates/protocol"

[dev-dependencies]
pretty_assertions.workspace = true
