[package]
name = "bittorrent-cli"
version = "0.1.0"
description = "command-line interface for bittorrent-rs"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
argh = "0.1.9"
bittorrent = { path = ".." }
ctrlc = "3.2.3"
flexi_logger = "0.24"
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
