[package]
name = "bittorrent-cli"
version = "0.1.0"
description = "command-line interface for bittorrent-rs"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
argh = "0.1"
bincode = "1.3.3"
bittorrent = { path = ".." }
ctrlc = "3.2"
flexi_logger = "0.24"
log = { workspace = true }
#tracing-subscriber = "0.3.16"
#tracing-tracy = "0.10.2"
#tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
