[package]
name = "io"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
resume = []

[dependencies]
# Crate dependencies
# Workspace dependencies
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

# Local dependencies
protocol.path = "../protocol"

[dev-dependencies]
pretty_assertions.workspace = true
