[package]
name = "protocol"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Crate dependencies
bytes = "1"
lazy_static = "1"
paste = "1"
percent-encoding = "2"
reqwest = "0.11"
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_json = "1"

# Workspace dependencies
tokio = { workspace = true, features = ["macros"] }
thiserror.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
sha1.workspace = true

# Local dependencies
common.path = "../common"

[dev-dependencies]
pretty_assertions.workspace = true
